--- a/index.html
+++ b/index.html
@@ -5,5 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best tour plan: Hotel Booking</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <section class="container">
+        <div class="header-top">
+          <a href="#" class="logo"
+            ><img
+              src="img/horizonts-logo.svg"
+              alt="Logo: Best tour plan"
+              class="logo__img"
+          /></a>
+
+          <form action="#" class="serch" placeholder="Search Location">
+            <input type="text" class="search__input" />
+            <button class="search__button">
+              <img
+                src="img/search.svg"
+                alt="Icon: search"
+                class="search__icon"
+              />
+            </button>
+          </form>
+          <a href="#" class="avatar">
+            <img
+              src="img/avatar.jpg"
+              alt="Avatar: Nathan"
+              class="avatar__img"
+            />
+            <span class="avatar__name">Nathan</span>
+          </a>
+        </div>
+        <!-- /.header-top -->
+      </section>
+      <!-- /.container -->
+    </div>
+    <!-- /.header -->
+  </body>
 </html>
