Creat: header-menu in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               class="logo__img"
           /></a>
 
-          <form action="#" class="serch" placeholder="Search Location">
+          <form action="#" class="search" placeholder="Search Location">
             <input type="text" class="search__input" />
             <button class="search__button">
               <img
@@ -26,16 +26,40 @@
               />
             </button>
           </form>
-          <a href="#" class="avatar">
+          <a href="#" class="user">
             <img
               src="img/avatar.jpg"
               alt="Avatar: Nathan"
-              class="avatar__img"
+              class="user__avatar"
             />
-            <span class="avatar__name">Nathan</span>
+            <span class="user__name">Nathan</span>
           </a>
         </div>
         <!-- /.header-top -->
+        <ul class="header-menu">
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">All Deals</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">Hotels</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link"></a>Activities
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link"></a>Hotel Day Packages
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">Restaurants</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link"></a>Events
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link"></a>Rodrigues
+          </li>
+        </ul>
+        <!-- /.header-menu -->
       </section>
       <!-- /.container -->
     </div>
