fix: errors in the form tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="header">
-      <section class="container">
+      <div class="container">
         <div class="header-top">
           <a href="#" class="logo"
             ><img
@@ -16,8 +16,12 @@
               class="logo__img"
           /></a>
 
-          <form action="#" class="search" placeholder="Search Location">
-            <input type="text" class="search__input" />
+          <form action="#" class="search">
+            <input
+              type="text"
+              class="search__input"
+              placeholder="Search Location"
+            />
             <button class="search__button">
               <img
                 src="img/search.svg"
@@ -44,23 +48,23 @@
             <a href="#" class="header-menu__link">Hotels</a>
           </li>
           <li class="header-menu__item">
-            <a href="#" class="header-menu__link"></a>Activities
+            <a href="#" class="header-menu__link">Activities</a>
           </li>
           <li class="header-menu__item">
-            <a href="#" class="header-menu__link"></a>Hotel Day Packages
+            <a href="#" class="header-menu__link">Hotel Day Packages</a>
           </li>
           <li class="header-menu__item">
             <a href="#" class="header-menu__link">Restaurants</a>
           </li>
           <li class="header-menu__item">
-            <a href="#" class="header-menu__link"></a>Events
+            <a href="#" class="header-menu__link">Events</a>
           </li>
           <li class="header-menu__item">
-            <a href="#" class="header-menu__link"></a>Rodrigues
+            <a href="#" class="header-menu__link">Rodrigues</a>
           </li>
         </ul>
         <!-- /.header-menu -->
-      </section>
+      </div>
       <!-- /.container -->
     </div>
     <!-- /.header -->
