--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;600;700;800;900&family=Nunito:wght@200;300;400;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="header">
