--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               class="logo__img"
           /></a>
 
-          <form action="#" class="search">
+          <form action="#" class="search header__search">
             <input
               type="text"
               class="search__input"
