--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="header">
+    <div class="navbar">
       <div class="container">
-        <div class="header-top">
+        <div class="navbar-top">
           <a href="#" class="logo"
             ><img
               src="img/horizonts-logo.svg"
@@ -45,33 +45,39 @@
             <span class="user__name">Nathan</span>
           </a>
         </div>
-        <!-- /.header-top -->
-        <ul class="header-menu">
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">All Deals</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Hotels</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Activities</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Hotel Day Packages</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Restaurants</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Events</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Rodrigues</a>
-          </li>
-        </ul>
-        <!-- /.header-menu -->
+        <!-- /.navbar-top -->
       </div>
       <!-- /.container -->
+      <div class="navbar-bottom">
+        <div class="container">
+          <ul class="navbar-menu">
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">All Deals</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Hotels</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Activities</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Restaurants</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Events</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Rodrigues</a>
+            </li>
+          </ul>
+          <!-- /.navbar-menu -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.navbar-bottom -->
     </div>
     <!-- /.header -->
   </body>
