Create: media(1200, 992, 768, 576) and menu-button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               class="logo__img"
           /></a>
 
-          <form action="#" class="search header__search">
+          <form action="#" class="search navbar__search">
             <input
               type="text"
               class="search__input"
@@ -44,6 +44,12 @@
             />
             <span class="user__name">Nathan</span>
           </a>
+
+          <button class="menu-button navbar-top__menu-button">
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+          </button>
         </div>
         <!-- /.navbar-top -->
       </div>
