Create: add breadcrumb

--- a/index.html
+++ b/index.html
@@ -86,5 +86,24 @@
       <!-- /.navbar-bottom -->
     </div>
     <!-- /.header -->
+    <nav class="breadcrumb">
+      <div class="container">
+        <ul class="breadcrumb-list">
+          <li class="breadcrumb-list__item">
+            <a href="" class="breadcrumb-list__link">Home</a>
+          </li>
+          <!-- /.breadcrumb-list__item -->
+          <li class="breadcrumb-list__item">
+            <a href="" class="breadcrumb-list__link">Flash Offers</a>
+          </li>
+          <!-- /.breadcrumb-list__item -->
+          <li class="breadcrumb-list__item">Grand Hilton Hotel</li>
+          <!-- /.breadcrumb-list__item -->
+        </ul>
+        <!-- /.breadcrimb-list -->
+      </div>
+      <!-- /.container -->
+    </nav>
+    <!-- /.breadcrumb -->
   </body>
 </html>
