--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
               <span class="offer hotel-info__offer">Flash Offer</span>
             </div>
             <p class="hotel-discription hotel-info__discription">
-              Half-Board/ All Inclusive + Complimentary Activities + Child Stays
-              Free
+              Half-Board/ All Inclusive + Complimentary
+              Activities&nbsp;+&nbsp;Child&nbsp;Stays&nbsp;Free
             </p>
           </div>
           <!-- /.hotel-info__left -->
