--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <!-- /.hotel-info__left -->
           <div class="rating hotel-info__rating">
             <span class="rating__text">User Rattings</span>
-            <span class="rating__counter">4.5/5</span>
+            <span class="rating__counter">4.5/<span class="five">5</span></span>
           </div>
           <!-- /.hotel-info__right -->
         </div>
