--- a/index.html
+++ b/index.html
@@ -143,13 +143,25 @@
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/swiper.jpg" alt="slide" />
+                  <img
+                    src="img/swiper.jpg"
+                    alt="slide"
+                    class="swiper-slide__img"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/swiper.jpg" alt="slide" />
+                  <img
+                    src="img/swiper-two.jpg "
+                    alt="slide"
+                    class="swiper-slide__img"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/swiper.jpg" alt="slide" />
+                  <img
+                    src="img/swiper-three.jpg"
+                    alt="slide"
+                    class="swiper-slide__img"
+                  />
                 </div>
               </div>
 
