Create: add img

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <img
                     src="img/swiper.jpg"
                     alt="slide"
-                    class="swiper-slide__img"
+                    class="swiper-slide__img swiper-slide__gradient"
                   />
                 </div>
                 <div class="swiper-slide">
@@ -159,6 +159,20 @@
                 <div class="swiper-slide">
                   <img
                     src="img/swiper-three.jpg"
+                    alt="slide"
+                    class="swiper-slide__img"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/swiper-four.jpg"
+                    alt="slide"
+                    class="swiper-slide__img"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="img/swiper-five.jpg"
                     alt="slide"
                     class="swiper-slide__img"
                   />
