--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <img
                     src="img/swiper.jpg"
                     alt="slide"
-                    class="swiper-slide__img swiper-slide__gradient"
+                    class="swiper-slide__img"
                   />
                 </div>
                 <div class="swiper-slide">
