fix: index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script
-      src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"
-      type="text/javascript"
-    ></script>
   </head>
   <body>
     <div class="navbar">
@@ -240,6 +236,7 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
