Create: add section newsletter

--- a/index.html
+++ b/index.html
@@ -235,6 +235,24 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <section class="newsletter">
+      <div class="newsletter-wrapper">
+        <h2 class="newsletter-title">
+          subscribe to our
+          <span class="newsletter-title__strong">Newsletter</span>
+        </h2>
+        <form action="#" class="newsletter-subscribe">
+          <input
+            type="text"
+            class="newsletter-subscribe__input"
+            placeholder="Your email address"
+          />
+          <button class="newsletter-subscribe__button">Send</button>
+        </form>
+      </div>
+      <!-- /.newsletter-wrapper -->
+    </section>
+    <!-- /.newsletter -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
