Create: add paralax

--- a/index.html
+++ b/index.html
@@ -253,7 +253,49 @@
       <!-- /.newsletter-wrapper -->
     </section>
     <!-- /.newsletter -->
+    <section class="response">
+      <div class="container">
+        <h2 class="section-title">What people thinks about us</h2>
+        <div class="response-container">
+          <!-- Additional required wrapper -->
+          <div class="response-wrapper">
+            <!-- Slides -->
+            <div class="response-slide">
+              <img src="img/user-1.jpg" alt="" class="response-slide__avatar" />
+              <span class="response-slide__name">Megan Fox</span>
+              <div class="response-slide__rating">
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+              </div>
+              <p class="response-slide__feedback">
+                It was very nice hotel with cleanliness. Staff behavior was good
+                and polite. They welcome us very well. Issue was only that Lift
+                was not in working and we were allotted to 3rd floor and
+                amenities articles were in corner of gallery which were giving
+                bad feeling. Breakfast was good and support of the staff was
+                also very nice. Location is not good as per atmosphere, it is
+                very nearby most of the popular places but self location in a
+                narrow street is not good. Overall it was a good experience and
+                could recommend.
+              </p>
+            </div>
+            <!-- /.response-slide -->
+          </div>
+          <!-- /.response-wrapper -->
+          <div class="response-button-prev"></div>
+          <div class="response-button-next"></div>
+        </div>
+        <!-- /.response-container -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.response -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
