create: add media for newsletter and response

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <!-- /.newsletter -->
     <section class="response">
       <div class="container">
-        <h2 class="response__title">What people thinks about us</h2>
+        <h2 class="response__title">What people thinks about&nbsp;us</h2>
         <div class="swiper-container response-slider">
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper response-wrapper">
