Create: add block activites and adaptive fix error

--- a/index.html
+++ b/index.html
@@ -375,6 +375,64 @@
       <!-- /.container -->
     </section>
     <!-- /.response -->
+    <section class="activites">
+      <div class="container">
+        <h2 class="activites-title">Other Activities</h2>
+        <div class="activites-wrapper">
+          <div class="card activites__card">
+            <img
+              src="img/activite.jpg"
+              alt="The curious corner 
+of chamarel"
+              class="activites-card__img"
+            />
+            <h3 class="activites-card__title">
+              The curious corner of chamarel
+            </h3>
+            <button class="activites-card__button">Book Now</button>
+          </div>
+          <div class="card activites__card">
+            <img
+              src="img/activite-2.jpg"
+              alt="Gymkhana club golf
+course"
+              class="activites-card__img"
+            />
+            <h3 class="activites-card__title">Gymkhana club golf course</h3>
+            <button class="activites-card__button">Book Now</button>
+          </div>
+          <div class="card activites__card">
+            <img
+              src="img/activite-3.jpg"
+              alt="Tamarind falls hiking
+trip - full day
+
+"
+              class="activites-card__img"
+            />
+            <h3 class="activites-card__title">
+              Tamarind falls hiking trip - full day
+            </h3>
+            <button class="activites-card__button">Book Now</button>
+          </div>
+          <div class="card activites__card">
+            <img
+              src="img/activite-4.jpg"
+              alt="The blue marine discovery
+quest"
+              class="activites-card__img"
+            />
+            <h3 class="activites-card__title">
+              The blue marine discovery quest
+            </h3>
+            <button class="activites-card__button">Book Now</button>
+          </div>
+        </div>
+        <!-- /.activites-wraper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.activites -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/parallax.min.js"></script>
