--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ of chamarel"
               class="activites-card__img"
             />
             <h3 class="activites-card__title">
-              The curious corner of chamarel
+              The curious corner of&nbsp;chamarel
             </h3>
             <button class="activites-card__button">Book Now</button>
           </div>
@@ -411,7 +411,7 @@ trip - full day
               class="activites-card__img"
             />
             <h3 class="activites-card__title">
-              Tamarind falls hiking trip - full day
+              Tamarind falls hiking trip&nbsp;-&nbsp;full day
             </h3>
             <button class="activites-card__button">Book Now</button>
           </div>
