--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="navbar">
       <div class="container">
         <div class="navbar-top">
-          <a href="#" class="logo"
+          <a href="#" class="logo navbar__logo"
             ><img
               src="img/horizonts-logo.svg"
               alt="Logo: Best tour plan"
@@ -242,57 +242,61 @@
       <div class="container">
         <h2 class="packages-title">Other Packages</h2>
         <div class="packages-wrapper">
-          <div class="card packages__card">
-            <img
-              src="img/packages/other.jpg"
-              alt="Hotel Blue Haven"
-              class="packages-card__img"
-            />
-            <div class="packages-rating">
-              <img src="img/star.svg" alt="stars" />
-              <img src="img/star.svg" alt="stars" />
-              <img src="img/star.svg" alt="stars" />
-              <img src="img/star.svg" alt="stars" />
-              <img src="img/star.svg" alt="stars" />
+          <div class="card packages-card packages__card">
+            <div class="packages-img">
+              <img
+                src="img/packages/other.jpg"
+                alt="Hotel Blue Haven"
+                class="packages-card__img"
+              />
             </div>
-            <h3 class="packages-card__title">
-              Hotel Blue Haven
-            </h3>
-            <p class="packages-text">
-              Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
-              enim laborum magna llit. Ipsum est fugiat velit ea llamco do esse
-              ut in veniam sun in onsequat. Aute quis duis epteur excepteur
-              ipsum occaecat eiusmod nsectetur enim laborum magna mollit. Ipsum
-              est fugiat velit ea ullamco do
-            </p>
-            <div class="packages-person">
-              <span class="packages-person__address">
-                <img
-                  src="img/mark.svg"
-                  alt="Icon: user"
-                  class="packages-person__user"
-                />1749 Wheeler Ridge Delaware</span
-              >
-              <span class="packages-person__guests">
-                <img
-                  src="img/user.svg"
-                  alt="Icon: user"
-                  class="packages-person__user"
-                />2 x Guests</span
-              >
-              <span class="packages-person__room"
-                ><img
-                  src="img/home.svg"
-                  alt="Icon: home"
-                  class="packages-person__home"
-                />1 x Room</span
-              >
+            <div class="packages-item">
+              <div class="packages-rating">
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+              </div>
+              <h3 class="packages-card__title">
+                Hotel Blue Haven
+              </h3>
+              <p class="packages-text">
+                Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
+                enim laborum magna llit. Ipsum est fugiat velit ea llamco do
+                esse ut in veniam sun in onsequat. Aute quis duis epteur
+                excepteur ipsum occaecat eiusmod nsectetur enim laborum magna
+                mollit. Ipsum est fugiat velit ea ullamco do
+              </p>
+              <div class="packages-person">
+                <span class="packages-person__address">
+                  <img
+                    src="img/mark.svg"
+                    alt="Icon: mark"
+                    class="packages-person__user"
+                  />1749 Wheeler Ridge Delaware</span
+                >
+                <span class="packages-person__guests">
+                  <img
+                    src="img/user.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />2 x Guests</span
+                >
+                <span class="packages-person__room"
+                  ><img
+                    src="img/home.svg"
+                    alt="Icon: home"
+                    class="packages-person__home"
+                  />1 x Room</span
+                >
+              </div>
+              <div class="packages-prise">
+                <span class="packages-price__old">$ 10,500</span>
+                <strong class="packages-price__new">$ 8,500</strong>
+              </div>
+              <button class="packages-card__button">Book Now</button>
             </div>
-            <div class="packages-prise">
-              <span class="packages-price__old">$ 10,500</span>
-              <strong class="packages-price__new">$ 8,500</strong>
-            </div>
-            <button class="packages-card__button">Book Now</button>
           </div>
           <!--/.card-->
           <div class="card packages__card">
@@ -654,6 +658,187 @@ quest"
       <!-- /.container -->
     </section>
     <!-- /.activites -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-wrapper">
+          <img
+            src="img/vertical-logo.svg"
+            alt="Logo: Best tour plan"
+            class="logo footer__logo"
+          />
+          <div class="footer__list footer__categories">
+            <h3 class="footer__title">ALL CATEGORIES</h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">All Deals</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Hotels</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Activities</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Spa Packages</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Hotel Day Packages</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Restaurants</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Fitness</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Rodrigues</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__list -->
+          <div class="footer__list footer__information">
+            <h3 class="footer__title">
+              ADDITIONAL INFORMATION
+            </h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">About Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">How does it work?</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Frequently Asked Questions</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Deals.mu loyalty program</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link"
+                  >Promote your Business on BTP</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__list -->
+          <div class="footer__social-network">
+            <h3 class="footer__title footer__title--inline">Social Network</h3>
+            <div class="footer__social-links">
+              <a href="#" class="footer__social-link"
+                ><img
+                  src="img/facebook.svg"
+                  alt="Icon: facebook"
+                  class="footer__icon"
+              /></a>
+              <a href="#" class="footer__social-link"
+                ><img
+                  src="img/youtube.svg"
+                  alt="Icon: youtube"
+                  class="footer__icon"
+              /></a>
+              <a href="#" class="footer__social-link"
+                ><img
+                  src="img/instagram.svg"
+                  alt="Icon: instagram"
+                  class="footer__icon"
+              /></a>
+            </div>
+          </div>
+          <!-- /.footer__social-network -->
+          <div class="footer__list footer__legal">
+            <h3 class="footer__title">LEGAL INFORMATION</h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms & Conditions</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Disclaimer</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Cancellation policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__list -->
+          <div class="footer__contact-details">
+            <h3 class="footer__title footer__title--mb-3">Contact Details</h3>
+            <p class="footer__text">
+              Feel free to contact us by phone, email or by our contact form
+            </p>
+            <ul class="footer__ul">
+              <li class="footer__item footer__item--mb-2">
+                <div class="footer__icon--wrapper">
+                  <img
+                    src="img/map-marker.svg"
+                    alt="Icon: marker"
+                    class="footer__icon"
+                  />
+                </div>
+                9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United
+                States
+              </li>
+              <li class="footer__item footer__item--mb-2">
+                <div class="footer__icon--wrapper">
+                  <img
+                    src="img/phone.svg"
+                    alt="Icon: phone"
+                    class="footer__icon"
+                  />
+                </div>
+                Tel (business hours) : 269 1500 Tel (hotline) Monday -
+                Saturday:<br />
+                52-56-61-38 (08:00 am – 20:00 pm) Tel (hotline) Sunday:<br />
+                52-56-61-38 (08:00 am – 14:00 pm)
+              </li>
+              <li class="footer__item footer__item--mb-2">
+                <div class="footer__icon--wrapper">
+                  <img
+                    src="img/email.svg"
+                    alt="Icon: email"
+                    class="footer__icon"
+                  />
+                </div>
+                cherly.lawson@example.com
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__contact-details -->
+          <div class="footer__contact-form">
+            <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
+            <form action="" class="footer__form">
+              <input
+                type="text"
+                class="input footer__input"
+                placeholder="Your Full Name*"
+              />
+              <input
+                type="text"
+                class="input footer__input"
+                placeholder="Phone Number*"
+              />
+              <textarea
+                class="footer__message"
+                cols="30"
+                rows="10"
+                placeholder="Message"
+              ></textarea>
+              <button class="button footer__button" type="submit">Send</button>
+              <span class="footer__info">* Required Fields</span>
+            </form>
+          </div>
+          <!-- /.footer__contact-form -->
+        </div>
+        <!-- /.footer-wrapper -->
+      </div>
+      <!-- /.container -->
+    </footer>
+    <!-- /.footer -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/parallax.min.js"></script>
