Creat: add conditions

--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ quest"
               <textarea
                 class="footer__message"
                 cols="30"
-                rows="10"
+                rows="4"
                 placeholder="Message"
               ></textarea>
               <button class="button footer__button" type="submit">Send</button>
@@ -833,6 +833,21 @@ quest"
             </form>
           </div>
           <!-- /.footer__contact-form -->
+          <div class="footer__conditions">
+            <ul class="footer__ul--rules">
+              <li class="footer__item--pay">Disclaimer</li>
+              <li class="footer__item--pay">Conditions of use</li>
+              <li class="footer__item--pay">Cancellation policy</li>
+            </ul>
+            <div class="footer__img">
+              <img
+                src="img/paypal.svg"
+                alt="Icon: payment"
+                class="footer__payment"
+              />
+            </div>
+          </div>
+          <!-- /.footer__conditions -->
         </div>
         <!-- /.footer-wrapper -->
       </div>
