Creat: media footer

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </section>
     <!-- /.hotel -->
 
-    <section class="packages">
+    <!--   <section class="packages">
       <div class="container">
         <h2 class="packages-title">Other Packages</h2>
         <div class="packages-wrapper">
@@ -299,7 +299,7 @@
             </div>
           </div>
           <!--/.card-->
-          <div class="card packages__card">
+    <!--<div class="card packages__card">
             <img
               src="img/packages/other-2.jpg"
               alt="LUX* Belle Mare"
@@ -338,7 +338,7 @@
             <button class="packages-card__button">Book Now</button>
           </div>
           <!--/.card-->
-          <div class="card packages__card">
+    <!--<div class="card packages__card">
             <img
               src="img/packages/other-3.jpg"
               alt="White Palace"
@@ -377,7 +377,7 @@
             <button class="packages-card__button">Book Now</button>
           </div>
           <!--/.card-->
-          <div class="card packages__card">
+    <!--<div class="card packages__card">
             <img
               src="img/packages/other-4.jpg"
               alt="Luxury Place"
@@ -416,7 +416,7 @@
             <button class="packages-card__button">Book Now</button>
           </div>
           <!--/.card-->
-          <div class="card packages__card">
+    <!--<div class="card packages__card">
             <img
               src="img/packages/other-5.jpg"
               alt="Hotel Five Star"
@@ -455,11 +455,11 @@
             <button class="packages-card__button">Book Now</button>
           </div>
           <!--/.card-->
-        </div>
+    <!-- </div>
         <!-- /.packages-wrapper -->
-      </div>
+    <!--</div>
       <!-- /.container -->
-    </section>
+    <!--</section>
     <!-- /.packages -->
 
     <section class="newsletter">
@@ -769,7 +769,8 @@ quest"
           <div class="footer__contact-details">
             <h3 class="footer__title footer__title--mb-3">Contact Details</h3>
             <p class="footer__text">
-              Feel free to contact us by phone, email or by our contact form
+              Feel free to contact us by phone, email or&nbsp;by&nbsp;our
+              contact form
             </p>
             <ul class="footer__ul">
               <li class="footer__item footer__item--mb-2">
@@ -780,7 +781,7 @@ quest"
                     class="footer__icon"
                   />
                 </div>
-                9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United
+                9748 Blossom Hill Rd undefined Lansing,&nbsp;Idaho 68545 United
                 States
               </li>
               <li class="footer__item footer__item--mb-2">
@@ -791,9 +792,9 @@ quest"
                     class="footer__icon"
                   />
                 </div>
-                Tel (business hours) : 269 1500 Tel (hotline) Monday -
+                Tel (business hours) : 269 1500 Tel&nbsp;(hotline)&nbsp;Monday -
                 Saturday:<br />
-                52-56-61-38 (08:00 am – 20:00 pm) Tel (hotline) Sunday:<br />
+                52-56-61-38 (08:00 am – 20:00 pm) Tel&nbsp;(hotline) Sunday:<br />
                 52-56-61-38 (08:00 am – 14:00 pm)
               </li>
               <li class="footer__item footer__item--mb-2">
@@ -828,8 +829,12 @@ quest"
                 rows="4"
                 placeholder="Message"
               ></textarea>
-              <button class="button footer__button" type="submit">Send</button>
-              <span class="footer__info">* Required Fields</span>
+              <div class="footer__send">
+                <button class="button footer__button" type="submit">
+                  Send
+                </button>
+                <span class="footer__info">* Required&nbsp;Fields</span>
+              </div>
             </form>
           </div>
           <!-- /.footer__contact-form -->
