--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
       <div class="container">
         <h2 class="activites-title">Other Activities</h2>
         <div class="activites-wrapper">
-          <div class="card activites__card">
+          <div class="card activites__cards">
             <img
               src="img/activite.jpg"
               alt="The curious corner 
@@ -616,7 +616,7 @@ of chamarel"
             </h3>
             <button class="activites-card__button">Book Now</button>
           </div>
-          <div class="card activites__card">
+          <div class="card activites__cards">
             <img
               src="img/activite-2.jpg"
               alt="Gymkhana club golf
@@ -626,7 +626,7 @@ course"
             <h3 class="activites-card__title">Gymkhana club golf course</h3>
             <button class="activites-card__button">Book Now</button>
           </div>
-          <div class="card activites__card">
+          <div class="card activites__cards">
             <img
               src="img/activite-3.jpg"
               alt="Tamarind falls hiking
@@ -640,7 +640,7 @@ trip - full day
             </h3>
             <button class="activites-card__button">Book Now</button>
           </div>
-          <div class="card activites__card">
+          <div class="card activites__cards">
             <img
               src="img/activite-4.jpg"
               alt="The blue marine discovery
@@ -774,7 +774,7 @@ quest"
             </p>
             <ul class="footer__ul">
               <li class="footer__item footer__item--mb-2">
-                <div class="footer__icon--wrapper">
+                <div class="footer_image">
                   <img
                     src="img/map-marker.svg"
                     alt="Icon: marker"
@@ -785,7 +785,7 @@ quest"
                 States
               </li>
               <li class="footer__item footer__item--mb-2">
-                <div class="footer__icon--wrapper">
+                <div class="footer_image">
                   <img
                     src="img/phone.svg"
                     alt="Icon: phone"
@@ -798,7 +798,7 @@ quest"
                 52-56-61-38 (08:00 am – 14:00 pm)
               </li>
               <li class="footer__item footer__item--mb-2">
-                <div class="footer__icon--wrapper">
+                <div class="footer_image">
                   <img
                     src="img/email.svg"
                     alt="Icon: email"
@@ -839,10 +839,12 @@ quest"
           </div>
           <!-- /.footer__contact-form -->
           <div class="footer__conditions">
-            <ul class="footer__ul--rules">
-              <li class="footer__item--pay">Disclaimer</li>
-              <li class="footer__item--pay">Conditions of use</li>
-              <li class="footer__item--pay">Cancellation policy</li>
+            <ul class="footer__ul footer__ul--rules">
+              <li class="footer__item footer__item--pay">Disclaimer</li>
+              <li class="footer__item footer__item--pay">Conditions of use</li>
+              <li class="footer__item footer__item--pay">
+                Cancellation policy
+              </li>
             </ul>
             <div class="footer__img">
               <img
