--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ quest"
             </p>
             <ul class="footer__ul">
               <li class="footer__item footer__item--mb-2">
-                <div class="footer_image">
+                <div class="footer__image">
                   <img
                     src="img/map-marker.svg"
                     alt="Icon: marker"
@@ -785,7 +785,7 @@ quest"
                 States
               </li>
               <li class="footer__item footer__item--mb-2">
-                <div class="footer_image">
+                <div class="footer__image">
                   <img
                     src="img/phone.svg"
                     alt="Icon: phone"
@@ -798,7 +798,7 @@ quest"
                 52-56-61-38 (08:00 am – 14:00 pm)
               </li>
               <li class="footer__item footer__item--mb-2">
-                <div class="footer_image">
+                <div class="footer__image">
                   <img
                     src="img/email.svg"
                     alt="Icon: email"
