--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
       <div class="container">
         <h2 class="activites-title">Other Activities</h2>
         <div class="activites-wrapper">
-          <div class="card activites__cards">
+          <div class="card activites-card">
             <img
               src="img/activite.jpg"
               alt="The curious corner 
@@ -616,7 +616,7 @@ of chamarel"
             </h3>
             <button class="activites-card__button">Book Now</button>
           </div>
-          <div class="card activites__cards">
+          <div class="card activites-card">
             <img
               src="img/activite-2.jpg"
               alt="Gymkhana club golf
@@ -626,7 +626,7 @@ course"
             <h3 class="activites-card__title">Gymkhana club golf course</h3>
             <button class="activites-card__button">Book Now</button>
           </div>
-          <div class="card activites__cards">
+          <div class="card activites-card">
             <img
               src="img/activite-3.jpg"
               alt="Tamarind falls hiking
@@ -640,7 +640,7 @@ trip - full day
             </h3>
             <button class="activites-card__button">Book Now</button>
           </div>
-          <div class="card activites__cards">
+          <div class="card activites-card">
             <img
               src="img/activite-4.jpg"
               alt="The blue marine discovery
