--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="navbar">
+    <div class="navbar navbar__menu--fixed">
       <div class="container">
         <div class="navbar-top">
           <a href="#" class="logo navbar__logo"
@@ -337,7 +337,7 @@
             </div>
             <button class="packages-card__button">Book Now</button>
           </div>
-          <!--/.card-->
+          <!-- /.card-->
     <!--<div class="card packages__card">
             <img
               src="img/packages/other-3.jpg"
@@ -812,7 +812,7 @@ quest"
           <!-- /.footer__contact-details -->
           <div class="footer__contact-form">
             <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-            <form action="" class="footer__form">
+            <form class="footer__forma">
               <input
                 type="text"
                 class="input footer__input"
