--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="navbar navbar__mobile--fixed">
+    <div class="navbar navbar__mobile_fixed">
       <div class="container">
         <div class="navbar-top">
           <a href="#" class="logo navbar__logo"
@@ -60,7 +60,7 @@
       <div class="navbar-bottom">
         <div class="container">
           <ul class="navbar-menu">
-            <li class="navbar-menu__item--mobile--visible">
+            <li class="navbar-menu__item_mobile_visible">
               <a
                 href="#"
                 class="user navbar__user navbar__user--mobile--visible"
@@ -73,7 +73,7 @@
                 <span class="user__name user__name--light">Nathan</span>
               </a>
             </li>
-            <li class="navbar-menu__item--mobile--visible">
+            <li class="navbar-menu__item_mobile_visible">
               <form
                 action="#"
                 class="search navbar__search navbar__search--mobile--visible"
