--- a/index.html
+++ b/index.html
@@ -161,7 +161,11 @@
             </p>
           </div>
           <!-- /.hotel-info__left -->
-          <div class="rating hotel-info__rating">
+          <div
+            data-toggle="modal"
+            data-href="#feedback"
+            class="rating hotel-info__rating"
+          >
             <span class="rating__text">User Rattings</span>
             <span class="rating__counter"
               >4.5/<span class="rating__counter-small">5</span></span
@@ -259,7 +263,13 @@
                 </a>
               </div>
               <!-- /.booking-call -->
-              <button class="booking-button">View Other Options</button>
+              <button
+                data-toggle="modal"
+                data-href="#booking-modal"
+                class="booking-button"
+              >
+                View Other Options
+              </button>
               <!-- /.booking-booton -->
             </div>
             <!-- /.booking -->
@@ -503,11 +513,12 @@
           subscribe to our
           <span class="newsletter-title__strong">Newsletter</span>
         </h2>
-        <form action="#" class="newsletter-subscribe">
+        <form action="send.php" method="POST" class="newsletter-subscribe">
           <input
             type="text"
             class="newsletter-subscribe__input"
             placeholder="Your email address"
+            name="email"
           />
           <button class="newsletter-subscribe__button">Send</button>
         </form>
@@ -847,22 +858,25 @@ quest"
           <!-- /.footer__contact-details -->
           <div class="footer__contact-form">
             <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-            <form class="footer__forma">
+            <form action="send.php" method="POST" class="footer__forma">
               <input
                 type="text"
                 class="input footer__input"
                 placeholder="Your Full Name*"
+                name="name"
               />
               <input
                 type="text"
                 class="input footer__input"
                 placeholder="Phone Number*"
+                name="phone"
               />
               <textarea
-                class="footer__message"
+                class="message footer__message"
                 cols="30"
                 rows="4"
                 placeholder="Message"
+                name="message"
               ></textarea>
               <div class="footer__send">
                 <button class="button footer__button" type="submit">
@@ -896,6 +910,94 @@ quest"
       <!-- /.container -->
     </footer>
     <!-- /.footer -->
+    <div class="modal" id="booking-modal">
+      <div class="modal__overlay"></div>
+      <!-- /.modal__overlay -->
+      <div class="modal__dialog">
+        <a href="#" class="modal__close">
+          <img src="img/close.svg" alt="Icon: close" class="modal__img" />
+        </a>
+        <h3 class="modal__title modal__title--mb-3">Booking</h3>
+        <form action="send.php" method="POST" class="modal__forma">
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Your Full Name*"
+            name="name"
+          />
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Phone Number*"
+            name="phone"
+          />
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Email*"
+            name="email"
+          />
+          <textarea
+            class="message modal__message"
+            cols="30"
+            rows="4"
+            placeholder="Message"
+            name="message"
+          ></textarea>
+          <div class="modal__send">
+            <button class="button modal__button" type="submit">
+              Send
+            </button>
+            <span class="modal__info">* Required&nbsp;Fields</span>
+          </div>
+        </form>
+      </div>
+      <!-- /.modal__dialog -->
+    </div>
+    <!-- /.modal -->
+    <div class="modal" id="feedback">
+      <div class="modal__overlay"></div>
+      <!-- /.modal__overlay -->
+      <div class="modal__dialog">
+        <a href="#" class="modal__close">
+          <img src="img/close.svg" alt="Icon: close" class="modal__img" />
+        </a>
+        <h3 class="modal__title modal__title--mb-3">Feedback</h3>
+        <form action="send.php" method="POST" class="modal__forma">
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Your Full Name*"
+            name="name"
+          />
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Phone Number*"
+            name="phone"
+          />
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Email*"
+            name="email"
+          />
+          <textarea
+            class="message modal__message"
+            placeholder="Message"
+            name="message"
+          ></textarea>
+          <div class="modal__send">
+            <button class="button modal__button" type="submit">
+              Send
+            </button>
+            <span class="modal__info">* Required&nbsp;Fields</span>
+          </div>
+        </form>
+      </div>
+      <!-- /.modal__dialog -->
+    </div>
+    <!-- /.modal -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/parallax.min.js"></script>
