--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li class="navbar-menu__item">
               <a href="#" class="navbar-menu__link">Events</a>
             </li>
-            <li class="navbar-menu__item">
+            <li class="navbar-menu__item navbar-menu__item_p3">
               <a href="#" class="navbar-menu__link">Rodrigues</a>
             </li>
           </ul>
