fix: scroll modal window

--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@ quest"
             <button class="button modal__button" type="submit">
               Send
             </button>
-            <span class="modal__info">* Required&nbsp;Fields</span>
+            <span class="modal__info">*&nbsp;Required&nbsp;Fields</span>
           </div>
         </form>
       </div>
@@ -991,7 +991,7 @@ quest"
             <button class="button modal__button" type="submit">
               Send
             </button>
-            <span class="modal__info">* Required&nbsp;Fields</span>
+            <span class="modal__info">*&nbsp;Required&nbsp;Fields</span>
           </div>
         </form>
       </div>
